--- a/src/Customer/CustomerApp.Api/appsettings.json
+++ b/src/Customer/CustomerApp.Api/appsettings.json
@@ -9,6 +9,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  // Sample for alternative IoC runtime configuration.
   "AllowedHosts": "*",
   "Bindings": {
     "binding1": {
