--- a/src/Loyalty.ApiGateway/appsettings.json
+++ b/src/Loyalty.ApiGateway/appsettings.json
@@ -14,6 +14,7 @@
     // Available options: "Monolithic", "Distributed"
     "Type": "Monolithic"
   },
+  // Sample for alternative IoC runtime configuration.
   "Bindings": {
     "binding1": {
       "service": "Loyalty.ApiGateway.Proxies.ICustomerProxy, Loyalty.ApiGateway",
